/*
 * Copyright 2021 Matrix Origin
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package moerr;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "github.com/matrixorigin/matrixone/pkg/pb/moerr";
option (gogoproto.sizer_all)      = false;
option (gogoproto.protosizer_all) = true;

message Error {
    uint32 code       = 1 [(gogoproto.casttype) = "uint16"];
    uint32 mysql_code = 2 [(gogoproto.casttype) = "uint16"];
    string message    = 3;
    string sql_state  = 4;
}
